[gd_scene load_steps=2 format=3 uid="uid://da6rj72jqwqbt"]

[ext_resource type="Script" uid="uid://dqwgqfvs8xsof" path="res://scenes/ui/end_screen/end_screen.gd" id="1_4ttpn"]

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4ttpn")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.501961)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(250, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -80.0
offset_right = 225.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.862745, 0.898039, 0, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/line_spacing = 6
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 50
text = "VICTORY"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(150, 80)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -190.0
offset_right = 75.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 7

[node name="DescriptionLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "YOU_WON"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "RESTART"

[node name="QuitToMenuButton" type="Button" parent="PanelContainer/VBoxContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT_MENU"
